--- a/src/css/root.css
+++ b/src/css/root.css
@@ -339,7 +339,6 @@
     --ifm-tabs-padding-vertical: 1rem;
 }
 
-
 .markdown > h1:first-child {
     font-size: calc(var(--ifm-h-font-size) * 1);
     margin-bottom: calc(
@@ -380,7 +379,6 @@
         var(--ifm-heading-vertical-rhythm-top) * var(--ifm-leading)
     );
 }
-
 
 @media (min-width: 997px) {
     #__docusaurus
@@ -447,4 +445,99 @@ article > div.theme-doc-markdown.markdown > p > img {
     > div
     > div.admonitionContent_node_modules-\@docusaurus-theme-classic-lib-theme-Admonition-styles-module {
     font-size: 0.9rem;
+}
+
+.one-dark-1 {
+    color: #56b6c2;
+    color: #c678dd;
+    color: #56b6c2;
+    color: #61afef;
+    color: #5c6370;
+    color: #98c379;
+    color: #d19a66;
+    color: #e5c07b;
+    color: #0a99bbff;
+    base: #282c34;
+    mono-1: #abb2bf;
+    mono-2: #818896;
+    mono-3: #5c6370;
+    hue-1: #56b6c2;
+    hue-2: #61aeee;
+    hue-3: #c678dd;
+    hue-4: #98c379;
+    hue-5: #e06c75;
+    hue-5-2: #be5046;
+    hue-6: #d19a66;
+    hue-6-2: #e6c07b;
+}
+
+/* From open AI */
+
+--sans-serif: ColfaxAI, Helvetica, sans-serif;
+--serif: Charter, Georgia, serif;
+--monospace: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
+
+
+@font-face {
+    font-family: "ColfaxAI";
+    src: url(../fonts/ColfaxAIRegular.woff2?v=2.0.0) format("woff2"),
+        url(../fonts/ColfaxAIRegular.woff?v=2.0.0) format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "ColfaxAI";
+    src: url(../fonts/ColfaxAIRegularItalic.woff2?v=2.0.0) format("woff2"),
+        url(../fonts/ColfaxAIRegularItalic.woff?v=2.0.0) format("woff");
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: "ColfaxAI";
+    src: url(../fonts/ColfaxAIBold.woff2?v=2.0.0) format("woff2"),
+        url(../fonts/ColfaxAIBold.woff?v=2.0.0) format("woff");
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: "ColfaxAI";
+    src: url(../fonts/ColfaxAIBoldItalic.woff2?v=2.0.0) format("woff2"),
+        url(../fonts/ColfaxAIBoldItalic.woff?v=2.0.0) format("woff");
+    font-weight: bold;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Charter";
+    src: url(../fonts/Charter-Regular.woff2) format("woff2"),
+        url(../fonts/Charter-Regular.woff) format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Charter";
+    src: url(../fonts/Charter-Italic.woff2) format("woff2"),
+        url(../fonts/Charter-Italic.woff) format("woff");
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Charter";
+    src: url(../fonts/Charter-Bold.woff2) format("woff2"),
+        url(../fonts/Charter-Bold.woff) format("woff");
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Charter";
+    src: url(../fonts/Charter-BoldItalic.woff2) format("woff2"),
+        url(../fonts/Charter-BoldItalic.woff) format("woff");
+    font-weight: bold;
+    font-style: italic;
+}
+@font-face {
+    font-family: "IconsAI";
+    src: url(../fonts/IconsAI.woff2?v=2.1.3) format("woff2"),
+        url(../fonts/IconsAI.woff?v=2.1.3) format("woff");
+    font-weight: normal;
+    font-style: normal;
 }
