--- a/src/pages/components/HomepageStyles.module.css
+++ b/src/pages/components/HomepageStyles.module.css
@@ -21,8 +21,14 @@
     margin: 30px 0;
 }
 
-@media screen and (max-width: 996px) {
+@media (min-width: 426px) and (max-width: 996px) {
     .homepageHeader {
         padding: 2rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .homepageHeader {
+        padding: 0.5rem;
     }
 }
